--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".gunlukHarcamaLimitim" />
         <activity android:name=".sabitGiderEkle" />
         <activity android:name=".sonucHesap" />
-        <activity android:name=".ScreenSlidePagerActivity"/>
+        <activity android:name=".ScreenSlidePagerActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
